--- a/test.ipynb
+++ b/test.ipynb
@@ -4057,6 +4057,339 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BPF',\n",
+       " 'LOG4',\n",
+       " 'NV_MAGICCONST',\n",
+       " 'RECIP_BPF',\n",
+       " 'Random',\n",
+       " 'SG_MAGICCONST',\n",
+       " 'SystemRandom',\n",
+       " 'TWOPI',\n",
+       " '_ONE',\n",
+       " '_Sequence',\n",
+       " '_Set',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_accumulate',\n",
+       " '_acos',\n",
+       " '_bisect',\n",
+       " '_ceil',\n",
+       " '_cos',\n",
+       " '_e',\n",
+       " '_exp',\n",
+       " '_floor',\n",
+       " '_index',\n",
+       " '_inst',\n",
+       " '_isfinite',\n",
+       " '_log',\n",
+       " '_os',\n",
+       " '_pi',\n",
+       " '_random',\n",
+       " '_repeat',\n",
+       " '_sha512',\n",
+       " '_sin',\n",
+       " '_sqrt',\n",
+       " '_test',\n",
+       " '_test_generator',\n",
+       " '_urandom',\n",
+       " '_warn',\n",
+       " 'betavariate',\n",
+       " 'choice',\n",
+       " 'choices',\n",
+       " 'expovariate',\n",
+       " 'gammavariate',\n",
+       " 'gauss',\n",
+       " 'getrandbits',\n",
+       " 'getstate',\n",
+       " 'lognormvariate',\n",
+       " 'normalvariate',\n",
+       " 'paretovariate',\n",
+       " 'randbytes',\n",
+       " 'randint',\n",
+       " 'random',\n",
+       " 'randrange',\n",
+       " 'sample',\n",
+       " 'seed',\n",
+       " 'setstate',\n",
+       " 'shuffle',\n",
+       " 'triangular',\n",
+       " 'uniform',\n",
+       " 'vonmisesvariate',\n",
+       " 'weibullvariate']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.19528121044296398"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.uniform(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = db.youtuber_info.find()\n",
+    "youtubers = [doc[\"title\"] for doc in cursor]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "youtuber_sample = random.sample(youtubers, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[]\n",
+    "for i in range(50):\n",
+    "    d =  {'youtuber' : youtuber_sample[i], 'cosine-simularity' : random.uniform(-1,1), 'comment-score' : random.uniform(1,5)}\n",
+    "    L.append(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'youtuber': '기아 Kia - 캬TV',\n",
+       "  'cosine-simularity': 0.9321764980238525,\n",
+       "  'comment-score': 1.727725207708065},\n",
+       " {'youtuber': '치세ちせ',\n",
+       "  'cosine-simularity': 0.898966394934466,\n",
+       "  'comment-score': 3.1951591763389517},\n",
+       " {'youtuber': '갓 형 욱',\n",
+       "  'cosine-simularity': -0.596723986845062,\n",
+       "  'comment-score': 3.0055124821121626},\n",
+       " {'youtuber': '여리나핏',\n",
+       "  'cosine-simularity': 0.9119252047003101,\n",
+       "  'comment-score': 4.615541683906304},\n",
+       " {'youtuber': '곰세 iT',\n",
+       "  'cosine-simularity': -0.8016161677407618,\n",
+       "  'comment-score': 4.571250128081626},\n",
+       " {'youtuber': '무비 저장소 MS',\n",
+       "  'cosine-simularity': 0.00153089222020375,\n",
+       "  'comment-score': 2.9610785867661997},\n",
+       " {'youtuber': '듣똑라',\n",
+       "  'cosine-simularity': 0.00660880511842854,\n",
+       "  'comment-score': 4.463944057373951},\n",
+       " {'youtuber': '[정겨운 작업실] -새삶스런 옷 공방-',\n",
+       "  'cosine-simularity': -0.4827111263118846,\n",
+       "  'comment-score': 1.171630789948447},\n",
+       " {'youtuber': 'JERRY Day제리',\n",
+       "  'cosine-simularity': -0.30316061108721315,\n",
+       "  'comment-score': 3.856163677055546},\n",
+       " {'youtuber': '호걸언니_이경실',\n",
+       "  'cosine-simularity': 0.15251964170507004,\n",
+       "  'comment-score': 1.0380468675183199},\n",
+       " {'youtuber': 'KUKKIWON WORLD TAEKWONDO HEADQUARTERS',\n",
+       "  'cosine-simularity': -0.8980084429898756,\n",
+       "  'comment-score': 4.38309553109981},\n",
+       " {'youtuber': '어피셜',\n",
+       "  'cosine-simularity': 0.28779001580786323,\n",
+       "  'comment-score': 3.9499566217520954},\n",
+       " {'youtuber': '진짜뉴스',\n",
+       "  'cosine-simularity': 0.4975906382067461,\n",
+       "  'comment-score': 2.268496345808779},\n",
+       " {'youtuber': '성주언니패션뷰',\n",
+       "  'cosine-simularity': -0.4132439698905983,\n",
+       "  'comment-score': 3.9322956622763074},\n",
+       " {'youtuber': '단앤조엘 Dan and Joel',\n",
+       "  'cosine-simularity': -0.2186578731359643,\n",
+       "  'comment-score': 3.8001369419706283},\n",
+       " {'youtuber': '주니tv',\n",
+       "  'cosine-simularity': -0.02802208653964766,\n",
+       "  'comment-score': 2.793260155158865},\n",
+       " {'youtuber': '예수전도단 화요모임 YWAM Worship Korea',\n",
+       "  'cosine-simularity': 0.7472263220071917,\n",
+       "  'comment-score': 1.9794467964810258},\n",
+       " {'youtuber': '에트라의 황당한 극장!',\n",
+       "  'cosine-simularity': 0.04632649578642423,\n",
+       "  'comment-score': 4.074585484102032},\n",
+       " {'youtuber': '지니의영어방송국',\n",
+       "  'cosine-simularity': 0.6895046302448913,\n",
+       "  'comment-score': 1.8320720824665182},\n",
+       " {'youtuber': '우니메이카(WOONYMAICA)',\n",
+       "  'cosine-simularity': 0.3040613021667653,\n",
+       "  'comment-score': 1.7644632316206814},\n",
+       " {'youtuber': '배틀그라운드 이스포츠',\n",
+       "  'cosine-simularity': -0.12199126881865685,\n",
+       "  'comment-score': 3.6698125108135593},\n",
+       " {'youtuber': '픽플러스',\n",
+       "  'cosine-simularity': 0.10778217842528504,\n",
+       "  'comment-score': 1.143873279681936},\n",
+       " {'youtuber': 'ESSEADET',\n",
+       "  'cosine-simularity': 0.8520131787540435,\n",
+       "  'comment-score': 1.890469417319792},\n",
+       " {'youtuber': '핵꿀잼',\n",
+       "  'cosine-simularity': 0.11319271034391742,\n",
+       "  'comment-score': 2.507389551603366},\n",
+       " {'youtuber': '웃교수',\n",
+       "  'cosine-simularity': -0.9371296394526651,\n",
+       "  'comment-score': 3.5893164237995605},\n",
+       " {'youtuber': '제목없음',\n",
+       "  'cosine-simularity': -0.37003629920485515,\n",
+       "  'comment-score': 2.5924330715239527},\n",
+       " {'youtuber': '트로트계 TV9',\n",
+       "  'cosine-simularity': 0.17942401929021856,\n",
+       "  'comment-score': 2.430267878302066},\n",
+       " {'youtuber': '친절한 제이쌤 nice jungja park',\n",
+       "  'cosine-simularity': -0.39658772108363416,\n",
+       "  'comment-score': 4.694142969629741},\n",
+       " {'youtuber': 'Go&Come, Church of God',\n",
+       "  'cosine-simularity': -0.11414567159094124,\n",
+       "  'comment-score': 3.8520790604394057},\n",
+       " {'youtuber': 'KOREAN SIMPLE',\n",
+       "  'cosine-simularity': -0.029807989671801538,\n",
+       "  'comment-score': 4.851158531102014},\n",
+       " {'youtuber': '도남이먹방Donam',\n",
+       "  'cosine-simularity': 0.3478159672555996,\n",
+       "  'comment-score': 3.4468281554095705},\n",
+       " {'youtuber': '썰티비',\n",
+       "  'cosine-simularity': -0.6319650780336767,\n",
+       "  'comment-score': 4.939665389783425},\n",
+       " {'youtuber': '민트하임:MintHeim',\n",
+       "  'cosine-simularity': -0.22025848282693894,\n",
+       "  'comment-score': 1.3752314767440788},\n",
+       " {'youtuber': '수사샤suesasha',\n",
+       "  'cosine-simularity': 0.24700796941193293,\n",
+       "  'comment-score': 3.475861409846189},\n",
+       " {'youtuber': '덕자전성시대',\n",
+       "  'cosine-simularity': 0.7623306992732017,\n",
+       "  'comment-score': 1.001370393050789},\n",
+       " {'youtuber': '한끼만족 one meal satisfaction',\n",
+       "  'cosine-simularity': -0.8773912405664255,\n",
+       "  'comment-score': 3.396807232204628},\n",
+       " {'youtuber': '검은별 공작소 Shorts',\n",
+       "  'cosine-simularity': 0.6784898438087199,\n",
+       "  'comment-score': 4.473527707363916},\n",
+       " {'youtuber': '왕구',\n",
+       "  'cosine-simularity': -0.49585473468256636,\n",
+       "  'comment-score': 4.637313807688939},\n",
+       " {'youtuber': '캡틴라미[captain ramy]',\n",
+       "  'cosine-simularity': -0.7183502463544293,\n",
+       "  'comment-score': 4.802075796454609},\n",
+       " {'youtuber': '유리하다',\n",
+       "  'cosine-simularity': 0.1181651760821898,\n",
+       "  'comment-score': 3.194042667934619},\n",
+       " {'youtuber': '매경 월가월부',\n",
+       "  'cosine-simularity': -0.0018155994677993004,\n",
+       "  'comment-score': 2.5477549835145337},\n",
+       " {'youtuber': '배돈',\n",
+       "  'cosine-simularity': 0.14310312041490336,\n",
+       "  'comment-score': 4.885285714409954},\n",
+       " {'youtuber': '안전한국TV Safe K(세이프케이)',\n",
+       "  'cosine-simularity': -0.08536627153371734,\n",
+       "  'comment-score': 3.671527368159404},\n",
+       " {'youtuber': '쉐이드그린 shade green',\n",
+       "  'cosine-simularity': -0.29736825608052797,\n",
+       "  'comment-score': 3.0757731914119915},\n",
+       " {'youtuber': '자취방남자movie comment',\n",
+       "  'cosine-simularity': 0.5924435418041334,\n",
+       "  'comment-score': 1.482133725771253},\n",
+       " {'youtuber': '어도비코리아',\n",
+       "  'cosine-simularity': 0.6823908156244352,\n",
+       "  'comment-score': 4.776012605628985},\n",
+       " {'youtuber': '놀라운 이슈 - Surprising Issue',\n",
+       "  'cosine-simularity': -0.39937744185221935,\n",
+       "  'comment-score': 2.0530377538742948},\n",
+       " {'youtuber': '개밍순 DogMingsoon',\n",
+       "  'cosine-simularity': 0.9967474186092207,\n",
+       "  'comment-score': 2.9918540279496444},\n",
+       " {'youtuber': '이노닉스TV',\n",
+       "  'cosine-simularity': 0.6788934497675321,\n",
+       "  'comment-score': 1.3790422806224543},\n",
+       " {'youtuber': '애니멀플래닛',\n",
+       "  'cosine-simularity': -0.6852542040588303,\n",
+       "  'comment-score': 1.7426865177427882}]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test.json\", \"w\") as f:\n",
+    "    json.dump(L, f, indent=2, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
